# Bamboo

./: README.md
backend/: Cargo.toml
backend/migrations/2023-09-17-083358_create_users/: up.sql
backend/src/: context.rs  database.rs  main.rs  models.rs  schema.rs
frontend/: .gitignore  README.md  package-lock.json  package.json  panda.config.ts  svelte.config.js  tsconfig.json
frontend/src/routes/: +layout.svelte  +page.svelte
