[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
qstring = "0.7.2"
awc = { version = "3.2.0", features = ["openssl"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

